--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 	<section>
 		<h2>FTP로 모바일 신규 페이지 작업 시 기본 틀</h2>
 		<h3>신규페이지 작업할 때 복사해서 사용하세요 (복사 후에 내부에 주석처리 되어 있는 부분은 삭제하고 작업해주세요)</h3>
-		<textarea name="" id="">
+		<textarea name="basic" id="basic">
 <!--#include virtual="/m/_include/mobile_header_noJQM.asp"--> <!-- 일반 페이지의 <head></head> 부분 -->
 <!--#include virtual="/m/_include/mobile_bodyS.asp"--> <!-- 템플릿의 서브상단부분에 작업한 내용이 들어가는 부분 -->
 <style>
@@ -165,7 +165,7 @@
 		<p>특정 요소를 클릭했을때 팝업이 열리거나 닫히게 작업하려면 위의 함수 사용하시면 됩니다.</p>
 		<p>popup_link_regist 부분은 underBoxWrap에 data-name 속성에 적혀있는 걸로 사용하시면 됩니다.</p>
 		<p>data-name에 따라 열리는 팝업이 달라지므로 항상 기능에 맞게 작명해주셔야합니다. (data-name이 똑같은게 두개가 있으면 팝업이 두개가 열리겠죠?)</p>
-		<textarea name="" id="">
+		<textarea name="popup" id="popup">
 <div class="popup-box">
 	<div class="underBoxWrap style1 _boxTarget" data-name="popup_link_regist">
 
