--- a/index.html
+++ b/index.html
@@ -36,6 +36,38 @@
 			스티커 메모에 적어놓고 보시면서 작업하시면 편합니다. 처음엔 불편하겠지만 코드 통일성을 위해 순서 맞춰서 작업 부탁드립니다.
 		</p>
 	</section>
+
+	<section>
+		<h2>템플릿 작업 (PC/M 메인페이지, 서브메인페이지, 서브상단, 서브하단 작업 시 작업)</h2>
+		<p>1. 템플릿 작업은 각 사이트의 관리자 사이트에서 작업합니다.</p>
+		<p>2. https://unni.tv/admin/ => 예시 링크 (계정 admin / a000000!)</p>
+		<p>3. 어드민 계정으로 접속했으면 상단 메뉴에서 디자인설정으로 이동</p>
+		<p>4. PC디자인설정/모바일디자인설정의 메인페이지관리는 PC/M의 메인페이지 작업 시 사용합니다.</p>
+		<p>5. 기본적으로 한 블록단위를 한 템플릿으로 작업합니다. (헤더, 탑메뉴, 메인배너, 카테고리아이콘 등)</p>
+		<p>* 한 템플릿안에 전체페이지를 넣지 않는 이유는 업체에서 기존 디자인시안에서 필요없는 부분을 제거할때 노출상태만 OFF시키면 되기 때문입니다.</p>
+		<p>6. 기존에 노출되어있는 템플릿과 비슷하다면 수정해서 사용해도 괜찮습니다.</p>
+		<p>7. 새로운 템플릿이 필요할 경우 왼쪽메뉴의 스타일 관리에서 신규스타일 등록하셔서 추가하시면 됩니다.</p>
+		<p>* 스타일명은 사이트명 + 기능으로 작명 => 예: 언니티비 메인헤더</p>
+		<p>* 샘플이미지는 디자인시안에서 해당영역을 1배크기로 받아서 넣어주시면 됩니다.</p>
+		<p>* 상품포함여부 : 상품등록이 필요한 템플릿일 경우 포함을 체크해서 몇개까지 노출될지 설정할 수 있습니다.</p>
+		<p>* 배너포함여부 : 해당 템플릿에 필요한 이미지를 몇개까지 등록할지 설정할 수 있습니다.</p>
+		<p>* 반복HTML : 주로 상품에 대한 HTML 구조가 반복될때 사용하는 부분입니다.</p>
+		<p>* 스타일 템플릿 : 템플릿에 필요한 CSS, HTML, Script를 작성하는 부분입니다.</p>
+		<h3>아래는 템플릿 작업시 기본 구조입니다.</h3>
+		<textarea >
+			<style>
+				/* 해당 템플릿에 필요한 CSS 작성*/
+			</style>
+			<div class="main-header-wrap">
+				<!-- 해당 템플릿에 필요한 HTML 구조 작성 -->
+			</div>
+			<script>
+				// 해당 템플릿에 필요한 스크립트 작성
+			</script>
+		</textarea name="template" id="template">
+		<p>언어팩이 설치되어있는 사이트의 경우 한글추출을 한번 누를경우 수정시마다 다시 한글추출을 눌러야 적용이 됩니다. 신규 템플릿을 작업하는거면 모두 작업한 후 언어팩 작업이 필요할 때 한글추출을 누르는게 좋습니다.</p>
+	</section>
+
 	<section>
 		<h2>작업 시 지켜야 할 루틴</h2>
 		<p>1. 작업 시작 시 구글 작업 스프레드시트 링크에 해당 작업을 노란색 배경으로 변경</p>
