--- a/guidelines.html
+++ b/guidelines.html
@@ -8,8 +8,15 @@
 </head>
 <body>
 	<header>
-		<h1>커머스프로 퍼블팀</h1>
-	</header>
+        <nav>
+            <ul>
+                <li><a href="index.html">홈</a></li>
+                <li><a href="guidelines.html">작업 가이드라인</a></li>
+                <li><a href="roles.html">역할 및 책임</a></li>
+                <li><a href="contact.html">팀 연락처</a></li>
+            </ul>
+        </nav>
+    </header>
 	<section>
 		<h2>회사 관련 내용</h2>
 		<p>1. 네이트온, 회사용 구글계정 만들기</p>
