FTP 기본 틀 내용추가

--- a/guidelines.html
+++ b/guidelines.html
@@ -172,6 +172,11 @@
 </div>
 <div class="sub-header-height"></div>
 <div id="mobile_wrap">
+	<!-- 부분숨김처리됨 -->
+	<div id="header" class="hide">
+		<!--#include virtual="/m/_include/mobile_top_menu.asp"-->
+	</div>
+	<!-- 부분숨김처리됨 끝 -->
 	<div class="content-"> <!-- content-파일명으로 class 작명, css 작업할때 꼭 맨 앞에 content-파일명으로 작업 (css 중복이 되지 않게 하기 위함) -->
 
 	</div>
