--- a/index.html
+++ b/index.html
@@ -3,33 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>퍼블리셔 팀 매뉴얼</title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>퍼블리셔팀 매뉴얼</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <header>
+        <h1>퍼블리셔팀 매뉴얼</h1>
         <nav>
             <ul>
-                <li><a href="index.html">홈</a></li>
-                <li><a href="guidelines.html">작업 가이드라인</a></li>
-                <li><a href="roles.html">역할 및 책임</a></li>
-                <li><a href="contact.html">팀 연락처</a></li>
+                <li><a href="#company">회사 생활</a></li>
+                <li><a href="#publisher">퍼블리셔 업무</a></li>
+                <li><a href="#additional">추가 정보</a></li>
             </ul>
         </nav>
     </header>
 
-    <main>
-        <h1>퍼블리셔 팀 매뉴얼</h1>
-        <p>퍼블리셔 팀의 매뉴얼에 오신 것을 환영합니다. 이 매뉴얼은 팀의 작업 절차와 규칙, 역할 및 책임에 대해 설명합니다.</p>
-        <ul>
-            <li><a href="guidelines.html">작업 가이드라인</a></li>
-            <li><a href="roles.html">역할 및 책임</a></li>
-            <li><a href="contact.html">팀 연락처</a></li>
-        </ul>
-    </main>
+    <section id="company">
+        <h2>회사 생활</h2>
+        <article>
+            <h3>근무 규칙</h3>
+            <p>근무 시간은 오전 9시부터 오후 6시까지입니다. 복장 규정은 자유 복장이나, 중요한 미팅 시 단정한 복장을 착용합니다.</p>
+        </article>
+        <article>
+            <h3>협업 도구</h3>
+            <p>Slack, 이메일 및 Jira를 사용하여 팀 간의 소통을 합니다. 매일 아침 스탠드업 미팅을 진행합니다.</p>
+        </article>
+    </section>
+
+    <section id="publisher">
+        <h2>퍼블리셔 업무</h2>
+        <article>
+            <h3>코드 스타일 가이드</h3>
+            <p>HTML 구조는 시맨틱 태그를 사용하며, CSS는 BEM(Block, Element, Modifier) 방식으로 작성합니다. JS는 모듈화된 코드를 사용합니다.</p>
+        </article>
+        <article>
+            <h3>브라우저 호환성</h3>
+            <p>최신 브라우저 및 IE11 이상에서 호환되도록 테스트합니다.</p>
+        </article>
+    </section>
+
+    <section id="additional">
+        <h2>추가 정보</h2>
+        <article>
+            <h3>버전 관리</h3>
+            <p>Git을 사용하여 코드 버전을 관리하며, 주요 브랜치는 main과 develop입니다. 코드 리뷰는 PR(Pull Request)을 통해 진행됩니다.</p>
+        </article>
+        <article>
+            <h3>자기 계발</h3>
+            <p>최신 웹 기술 트렌드를 학습하며, 정기적인 코드 개선 및 학습 기회를 가지는 것을 권장합니다.</p>
+        </article>
+    </section>
 
     <footer>
-        <p>&copy; 2024 퍼블리셔 팀</p>
+        <p>&copy; 2024 퍼블리셔팀 매뉴얼</p>
     </footer>
 </body>
 </html>
