회사 생활 추가

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>퍼블리셔팀 매뉴얼</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <header>
@@ -21,12 +21,70 @@
     <section id="company">
         <h2>회사 생활</h2>
         <article>
+            <h3>입사 시 해야 할 일</h3>
+            <h4>필수 계정 생성</h4>
+            <ul>
+                <li>네이트온 계정 생성</li>
+                <li>회사용 구글 계정 생성</li>
+                <li>하이웍스 계정 생성 (배상훈 과장님이 생성해주십니다.)</li>
+                <li>Jira 계정 생성</li>
+                <li>계정 생성 후 계정 정보 퍼블리셔팀 팀장에게 전달</li>
+            </ul>
+
+            <h4>지문등록</h4>
+            <ul>
+                <li>배상훈 과장님 통해서 지문등록</li>
+                <li>출/퇴근 시 출/퇴근 버튼 누른 후 지문스캔</li>
+                <li>그 외 회사 출입간 지문스캔 후 출입 (문이 열려있어도 지문스캔 하셔야 합니다.)</li>
+            </ul>
+
+            <h4>인사기록카드 작성</h4>
+            <ul>
+                <li>배상훈 과장님 통해서 인사기록카드 작성</li>
+            </ul>
+
+            <h4>식권대장</h4>
+            <ul>
+                <li>인사기록카드 작성 후 박규리 상무님이 계정 생성해주십니다. (생성에 시간이 며칠 소요될 수 있습니다.)</li>
+                <li>식권대장 계정정보 ID : 본인 휴대폰 번호(- 포함) / Password : a123456789</li>
+                <li>매월 초에 식권대장 어플에 10만원 지급 (입사 시에는 입사일 기준으로 지급)</li>
+                <li>식권대장에 등록된 식당에서 식사 가능합니다.(평일에만 가능, 아침/점심/저녁 무관)</li>
+                <li>남은 식권금액은 이월되지 않고 사라짐(남은 금액은 보통 회사 1층에 있는 GS25 편의점에서 사용)</li>
+            </ul>
+
+            <h4>필수 소프트웨어 설치</h4>
+            <ul>
+                <li>Visual Studio Code 설치</li>
+                <li>EditPlus 설치 (퍼블리셔팀 팀장에게 문의)</li>
+                <li>Chrome 설치</li>
+                <li>Adobe XD 설치</li>
+            </ul>
+
+            <h4>브라우저 즐겨찾기 추가</h4>
+            <ul>
+                <li>
+                    <a href="https://docs.google.com/spreadsheets/d/1jlz2NGBk5EVOjG7ql9jkEmj4gF_PIL2VaN62H18bZSE/edit?gid=1118343339#gid=1118343339">커머스프로 작업시트</a>
+                    <p>작업내용 확인을 위해 항상 켜두셔야 합니다.</p>
+                </li>
+                <li>
+                    <a href="https://commercepro-publishing.atlassian.net/jira/your-work">Jira 퍼블리셔팀</a>
+                </li>
+                <li>
+                    <a href="https://www.adobe.com/files/shared">XD 디자인 시안 다운로드 경로</a>
+                    <p>Adobe 계정정보 ID : ncg.developer1@gmail.com / Password : gPdud1203@ (파란색 프로필로 로그인)</p>
+                    <p>현재 작업중인 프로젝트 시안으로 들어가서 오른쪽 상단에 ... 버튼 클릭하면 다운로드 가능</p>
+                </li>
+            </ul>
+        </article>
+        <article>
             <h3>근무 규칙</h3>
-            <p>근무 시간은 오전 9시부터 오후 6시까지입니다. 복장 규정은 자유 복장이나, 중요한 미팅 시 단정한 복장을 착용합니다.</p>
+            <p>출근 시간은 오전 8시 30분부터 10시까지입니다. 퇴근 시간은 출근한 시간 기준 9시간 후입니다.</p>
+            <p>(예: 9시 6분 출근 시 6시 6분 퇴근)</p>
+            <p>복장에 대한 규정은 별도로 없습니다.</p>
         </article>
         <article>
             <h3>협업 도구</h3>
-            <p>Slack, 이메일 및 Jira를 사용하여 팀 간의 소통을 합니다. 매일 아침 스탠드업 미팅을 진행합니다.</p>
+            <p>Jira를 사용하여 팀 간의 소통을 합니다.</p>
         </article>
     </section>
 
