--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
             <h3>근무 규칙</h3>
             <p>출근 시간은 오전 8시 30분부터 10시까지입니다. 퇴근 시간은 출근한 시간 기준 9시간 후입니다.</p>
             <p>(예: 9시 6분 출근 시 6시 6분 퇴근)</p>
+            <p>* 8시 30분 보다 일찍 출근해도 퇴근은 5시 30분입니다.</p>
             <p>복장에 대한 규정은 별도로 없습니다.</p>
         </article>
         <article>
@@ -92,20 +93,21 @@
         <h2>퍼블리셔 업무</h2>
         <article>
             <h3>코드 스타일 가이드</h3>
-            <p>HTML 구조는 시맨틱 태그를 사용하며, CSS는 BEM(Block, Element, Modifier) 방식으로 작성합니다. JS는 모듈화된 코드를 사용합니다.</p>
-        </article>
-        <article>
-            <h3>브라우저 호환성</h3>
-            <p>최신 브라우저 및 IE11 이상에서 호환되도록 테스트합니다.</p>
+            <h4>HTML 구조 예시</h4>
+            <p class="codepen" data-height="300" data-default-tab="html,result" data-slug-hash="LYwVxQe" data-pen-title="Untitled" data-user="wruwgbcq-the-encoder" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+                <span>See the Pen
+                    <a href="https://codepen.io/wruwgbcq-the-encoder/pen/LYwVxQe">Untitled</a>by 코딩돌팔이 (
+                    <a href="https://codepen.io/wruwgbcq-the-encoder">@wruwgbcq-the-encoder</a>) on
+                    <a href="https://codepen.io">CodePen</a>.
+                </span>
+            </p>
+            <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+            <p>* class 작명시 단어와 단어 사이에 -(Hyphen) 추가</p>
         </article>
     </section>
 
     <section id="additional">
         <h2>추가 정보</h2>
-        <article>
-            <h3>버전 관리</h3>
-            <p>Git을 사용하여 코드 버전을 관리하며, 주요 브랜치는 main과 develop입니다. 코드 리뷰는 PR(Pull Request)을 통해 진행됩니다.</p>
-        </article>
         <article>
             <h3>자기 계발</h3>
             <p>최신 웹 기술 트렌드를 학습하며, 정기적인 코드 개선 및 학습 기회를 가지는 것을 권장합니다.</p>
