--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h3>입사 시 해야 할 일</h3>
             <h4>필수 계정 생성</h4>
             <ul>
-                <li>네이트온 계정 생성</li>
+                <li>네이트온 계정 생성 (계정생성 후 초대된 단톡방에 간단한 인사말 후에 단톡방에 있는 직원들 추가)</li>
                 <li>회사용 구글 계정 생성</li>
                 <li>하이웍스 계정 생성 (배상훈 과장님이 생성해주십니다.)</li>
                 <li>Jira 계정 생성</li>
@@ -64,17 +64,20 @@
             <ul>
                 <li>
                     <a href="https://docs.google.com/spreadsheets/d/1jlz2NGBk5EVOjG7ql9jkEmj4gF_PIL2VaN62H18bZSE/edit?gid=1118343339#gid=1118343339">커머스프로 작업시트</a>
-                    <p>작업내용 확인을 위해 항상 켜두셔야 합니다.</p>
+                    <p>* 작업내용 확인을 위해 항상 켜두셔야 합니다.</p>
                 </li>
                 <li>
                     <a href="https://commercepro-publishing.atlassian.net/jira/your-work">Jira 퍼블리셔팀</a>
                 </li>
                 <li>
                     <a href="https://www.adobe.com/files/shared">XD 디자인 시안 다운로드 경로</a>
-                    <p>Adobe 계정정보 ID : ncg.developer1@gmail.com / Password : gPdud1203@ (파란색 프로필로 로그인)</p>
-                    <p>현재 작업중인 프로젝트 시안으로 들어가서 오른쪽 상단에 ... 버튼 클릭하면 다운로드 가능</p>
+                    <p>* Adobe 계정정보 ID : ncg.developer1@gmail.com / Password : gPdud1203@ (파란색 프로필로 로그인)</p>
+                    <p>* 현재 작업중인 프로젝트 시안으로 들어가서 오른쪽 상단에 ... 버튼 클릭하면 다운로드 가능</p>
                 </li>
             </ul>
+
+            <h4>회사 WIFI</h4>
+            <p>NCG1_5G (다를수있음 NCGXXXX) / ncg_1203</p>
         </article>
         <article>
             <h3>근무 규칙</h3>
@@ -93,7 +96,9 @@
         <h2>퍼블리셔 업무</h2>
         <article>
             <h3>코드 스타일 가이드</h3>
-            <h4>HTML 구조 예시</h4>
+            <h4>HTML 가이드</h4>
+            <h5>HTML 구조 예시</h5>
+            <p>* class 작명시 단어와 단어 사이에 -(Hyphen) 추가</p>
             <p class="codepen" data-height="300" data-default-tab="html,result" data-slug-hash="LYwVxQe" data-pen-title="Untitled" data-user="wruwgbcq-the-encoder" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
                 <span>See the Pen
                     <a href="https://codepen.io/wruwgbcq-the-encoder/pen/LYwVxQe">Untitled</a>by 코딩돌팔이 (
@@ -102,7 +107,31 @@
                 </span>
             </p>
             <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
-            <p>* class 작명시 단어와 단어 사이에 -(Hyphen) 추가</p>
+
+            <h4>CSS 가이드</h4>
+            <h5>CSS 속성 선언 순서</h5>
+            <p>* 코드 가독성 및 통일성에 중요한 부분이니 준수해주시기 바랍니다.</p>
+            <ol>
+                <li>레이아웃 : display, visibility, overflow, float, clear, position, top, right, bottom, left, z-index</li>
+                <li>display:flex 관련된 css속성은 display:flex 뒤에 순서대로 작성 flex-direction, flex-wrap, flex-flow, flex, align-items, justify-content, align-self, align-content</li>
+                <li>BOX : width, height, margin, padding, border</li>
+                <li>배경 : background</li>
+                <li>폰트 : font, color, letter-spacing, text-align, text-decoration, text-indent, verticalalign, white-space</li>
+                <li>기타 위에 언급되지 않은 나머지 속성들로 폰트의 관련 속성 이후에 선언하며, 기타 속성 내의 선언 순서는 무관함</li>
+            </ol>
+
+            <h5>CSS 작업 시 주의사항</h5>
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </article>
+
+        <article>
+            <h3>템플릿 작업 가이드</h3>
         </article>
     </section>
 
