템플릿 작업 관련 추가

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <ul>
                 <li>배상훈 과장님 통해서 지문등록</li>
                 <li>출/퇴근 시 출/퇴근 버튼 누른 후 지문스캔</li>
-                <li>그 외 회사 출입간 지문스캔 후 출입 (문이 열려있어도 지문스캔 하셔야 합니다.)</li>
+                <li>그 외 회사 출입간 지문스캔 후 출입 (문이 열려있어도 지문스캔 필수)</li>
             </ul>
 
             <h4>인사기록카드 작성</h4>
@@ -48,7 +48,7 @@
                 <li>인사기록카드 작성 후 박규리 상무님이 계정 생성해주십니다. (생성에 시간이 며칠 소요될 수 있습니다.)</li>
                 <li>식권대장 계정정보 ID : 본인 휴대폰 번호(- 포함) / Password : a123456789</li>
                 <li>매월 초에 식권대장 어플에 10만원 지급 (입사 시에는 입사일 기준으로 지급)</li>
-                <li>식권대장에 등록된 식당에서 식사 가능합니다.(평일에만 가능, 아침/점심/저녁 무관)</li>
+                <li>식권대장에 등록된 식당에서 식사 가능(평일에만 가능, 아침/점심/저녁 무관)</li>
                 <li>남은 식권금액은 이월되지 않고 사라짐(남은 금액은 보통 회사 1층에 있는 GS25 편의점에서 사용)</li>
             </ul>
 
@@ -88,12 +88,22 @@
         </article>
         <article>
             <h3>협업 도구</h3>
-            <p>Jira를 사용하여 팀 간의 소통을 합니다.</p>
+            <h4>커머스프로 작업시트</h4>
+            <p>* 본인 이름 아래에 적혀 있는 작업 순서대로 처리하시면 됩니다.</p>
+            <ul></ul>
+
+            <h4>Jira를 사용하여 팀 간의 소통을 합니다.</h4>
         </article>
     </section>
 
     <section id="publisher">
         <h2>퍼블리셔 업무</h2>
+        <article>
+            <h3>작업 시작 전/종료 후 루틴</h3>
+            <ol>
+                <li>커머스프로 작업시트</li>
+            </ol>
+        </article>
         <article>
             <h3>코드 스타일 가이드</h3>
             <h4>HTML 가이드</h4>
@@ -129,9 +139,68 @@
                 <li></li>
             </ul>
         </article>
-
         <article>
             <h3>템플릿 작업 가이드</h3>
+            <ol>
+                <li>템플릿 작업을 위해 관리자 사이트(사이트도메인/admin)로 접속 (예: https://soundrank.net/admin)</li>
+                <li>
+                    <p>관리자 사이트 로그인</p>
+                    <p>* 기본 계정 정보 ID : admin / Password : a000000! (해당 계정으로 로그인 되지 않을 경우 퍼블리셔팀 팀장 또는 작업배치자에게 문의)</p>
+                </li>
+                <li>로그인 후 상단메뉴 → 디자인설정으로 이동</li>
+                <li>
+                    <p>좌측 메뉴 설명</p>
+                    <ul>
+                        <li>PC/모바인디자인설정 : PC버전의 경우 PC디자인설정 / 모바일버전의 경우 모바일디자인설정에서 작업</li>
+                        <li>
+                            <p>PC/모바일디자인설정 → 스타일관리 : PC버전/모바일버전에서 작업한 템플릿들이 저장된 곳</p>
+                            <p>* 신규스타일 등록으로 새로운 템플릿을 등록하거나 기존에 등록된 템플릿 확인용으로 사용</p>
+                        </li>
+                        <li>
+                            <p>PC/모바일디자인설정 → 메인페이지관리 : PC버전/모바일버전 메인페이지 작업 시 사용</p>
+                        </li>
+                        <li>
+                            <p>PC/모바일디자인설정 → 서브메인페이지관리 : PC버전/모바일버전 서브페이지를 템플릿으로 작업 시 사용</p>
+                            <p>* 서브페이지는 특별히 서브메인페이지로 요청받는게 아니라면 FTP서버에서 파일생성으로 작업합니다.</p>
+                        </li>
+                        <li>
+                            <p>PC/모바일디자인설정 → 인트로페이지관리 : PC버전/모바일버전 메인페이지 접속 전 페이지 작업 시 사용</p>
+                            <p>* 특별히 요청 받는게 아니라면 작업하지 않습니다.</p>
+                        </li>
+                        <li>
+                            <p>PC/모바일디자인설정 → 서브상단부분관리 : 모든 서브페이지 상단부분에 필요한 요소가 있을 때 작업</p>
+                            <p>* 서브페이지에서도 메인페이지 헤더를 사용할 경우, 햄버거버튼 팝업, 검색버튼 팝업 등이 위치합니다.</p>
+                        </li>
+                        <li>
+                            <p>PC/모바일디자인설정 → 서브하단부분관리 : 모든 서브페이지 하단부분에 필요한 요소가 있을 때 작업</p>
+                            <p>* 푸터, 하단메뉴 등이 위치합니다.</p>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <p>신규 템플릿 생성</p>
+                    <ol>
+                        <li>PC 또는 모바일 스타일관리 → 신규스타일 등록</li>
+                        <li>스타일명 : 사이트이름 + 직관적으로 작명 (예 : 사운드랭크 메인헤더 / 사운드랭크 왜 음원이 중요할까?! )</li>
+                        <li>샘플이미지 : 디자인시안에서 작업하는 부분만 1배 크기로 저장해서 등록</li>
+                        <li>상품포함여부 : 상품정보가 들어가는 템플릿의 경우 포함 체크 후 스타일 상품개수에 노출이 필요한 상품개수 등록 (그 이외에는 등록할 필요없음)</li>
+                        <li>배너포함여부 : 해당 템플릿에 이미지가 필요할 경우 포함 체크 후 배너 개수에 필요한 이미지 개수 등록</li>
+                        <li>반복HTML : 상품정보가 들어가는 템플릿의 경우 스타일 상품개수에 등록된 숫자만큼 노출되게 하기 위한 기능</li>
+                        <li>스타일 템플릿 : 해당하는 템플릿에 CSS, HTML, Javascript 등록 (Visual Studio Code에서 작업 후 복사 붙여넣기 하는 방식으로 작업하면 편함)</li>
+                    </ol>
+                </li>
+            </ol>
+            <h4>템플릿 작업 관련 FAQ</h4>
+            <ol>
+                <li></li>
+            </ol>
+        </article>
+
+        <article>
+            <h3>FAQ</h3>
+            <ol>
+                <li></li>
+            </ol>
         </article>
     </section>
 
