템플릿 작업 관련

--- a/index.html
+++ b/index.html
@@ -177,27 +177,25 @@
                         </li>
                     </ul>
                 </li>
-                <li>
-                    <p>신규 템플릿 생성</p>
-                    <ol>
-                        <li>PC 또는 모바일 스타일관리 → 신규스타일 등록</li>
-                        <li>스타일명 : 사이트이름 + 직관적으로 작명 (예 : 사운드랭크 메인헤더 / 사운드랭크 왜 음원이 중요할까?! )</li>
-                        <li>샘플이미지 : 디자인시안에서 작업하는 부분만 1배 크기로 저장해서 등록</li>
-                        <li>상품포함여부 : 상품정보가 들어가는 템플릿의 경우 포함 체크 후 스타일 상품개수에 노출이 필요한 상품개수 등록 (그 이외에는 등록할 필요없음)</li>
-                        <li>배너포함여부 : 해당 템플릿에 이미지가 필요할 경우 포함 체크 후 배너 개수에 필요한 이미지 개수 등록</li>
-                        <li>반복HTML : 상품정보가 들어가는 템플릿의 경우 스타일 상품개수에 등록된 숫자만큼 노출되게 하기 위한 기능</li>
-                        <li>스타일 템플릿 : 해당하는 템플릿에 CSS, HTML, Javascript 등록 (Visual Studio Code에서 작업 후 복사 붙여넣기 하는 방식으로 작업하면 편함)</li>
-                    </ol>
+                <li style="display: flex;gap: 40px;">
+                    <div class="image-box" style="width: 50%;">
+                        <img src="/image/soundrank_homepage_pc.png" alt="사운드랭크 PC메인페이지 시안" style="width: 100%;">
+                    </div>
+                    <div class="text-box" style="width: 50%;">
+                        <h4>신규 템플릿 생성</h4>
+                        <ol>
+                            <li>PC 또는 모바일 스타일관리 → 신규스타일 등록</li>
+                            <li>스타일명 : 사이트이름 + 직관적으로 작명 (예 : 사운드랭크 메인헤더 / 사운드랭크 왜 음원이 중요할까?! )</li>
+                            <li>샘플이미지 : 디자인시안에서 작업하는 부분만 1배 크기로 저장해서 등록</li>
+                            <li>상품포함여부 : 상품정보가 들어가는 템플릿의 경우 포함 체크 후 스타일 상품개수에 노출이 필요한 상품개수 등록 (그 이외에는 등록할 필요없음)</li>
+                            <li>배너포함여부 : 해당 템플릿에 이미지가 필요할 경우 포함 체크 후 배너 개수에 필요한 이미지 개수 등록</li>
+                            <li>반복HTML : 상품정보가 들어가는 템플릿의 경우 스타일 상품개수에 등록된 숫자만큼 노출되게 하기 위한 기능</li>
+                            <li>스타일 템플릿 : 해당하는 템플릿에 CSS, HTML, Javascript 등록 (Visual Studio Code에서 작업 후 복사 붙여넣기 하는 방식으로 작업하면 편함)</li>
+                        </ol>
+                    </div>
                 </li>
             </ol>
             <h4>템플릿 작업 관련 FAQ</h4>
-            <ol>
-                <li></li>
-            </ol>
-        </article>
-
-        <article>
-            <h3>FAQ</h3>
             <ol>
                 <li></li>
             </ol>
